--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   },
   "peerDependencies": {
     "react": ">=16.13.1",
-    "react-native": ">=0.63.3",
+    "react-native": ">=0.63.3"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
